--- a/style.css
+++ b/style.css
@@ -10,21 +10,26 @@ body {
 p {
     text-align: right;
     margin: 10px 40px;
-    color: rgb(90, 90, 90);
     font-weight: bold;
     font-family:'Courier New', Courier, monospace;
-    overflow:hidden;
-    direction: rtl;
+
+
     max-width: 250px;
 }
 
-.input {
+.currentDisplay {
     font-size: 40px;
+    color: rgb(90, 90, 90);
+    overflow:hidden;
+    margin: 10px 30px;
 }
 
-.operation {
+.previousDisplay {
     font-size: 20px;
     font-style: italic;
+    color: rgb(90, 90, 90);
+    overflow:hidden;
+    margin: 10px 30px;
 }
 
 .display {
@@ -35,6 +40,8 @@ p {
     margin-bottom: 20px; 
     padding: 20;   
     justify-content: right;
+    height: 125px;
+    align-content: space-between;
 }
 
 
@@ -44,7 +51,7 @@ p {
     background-color: rgb(154, 170, 166);
     padding: 30px;
     border-radius: 50px;
-    box-shadow: 0px 0px 20px #7e7e7e;
+    box-shadow: 1px 1px 20px #7e7e7e;
 }
 
 .dltClrBtns {
